# RapidDecoder

./: .gitignore  settings.gradle
jpeg-decoder/: CMakeLists.txt  build.gradle
jpeg-decoder/src/main/: AndroidManifest.xml
jpeg-decoder/src/main/cpp/: jpegdecoder.cpp  pixelcomposer.cpp  pixelcomposer.h
jpeg-decoder/src/main/cpp/jpgd/: jpgd.h
jpeg-decoder/src/main/jpgd/: jpgd.h
png-decoder/: CMakeLists.txt  build.gradle
png-decoder/src/main/: AndroidManifest.xml
png-decoder/src/main/cpp/: pngdecoder.cpp  pngdecoder.h  sampler.cpp  sampler.h
png-decoder/src/main/cpp/libpng/: pnglibconf.h
sample/: build.gradle
sample/src/main/java/rapid/decoder/sample/: ContactsFragment.java  FrameFragment.java  GalleryFragment.java  MainActivity.java  MutableDecodingFragment.java  RegionalDecodingFragment.java  ResetFragment.java  ScaledDecodingFragment.java  WrapContentFragment.java
sample/src/main/java/rapid/decoder/sample/widget/: SquaredImageView.java
sample/src/main/res/layout/: activity_main.xml
sample/src/main/res/values/: arrays.xml
